# axt-spl-library

./: CMakeLists.txt  README.md
include/: axc.h  axt.h  defines.h  diff.h  gaxc.h  gaxtch.h  gaxtch1.h  gaxtuh.h  gaxtuh1hw04w.h  gaxtuh1hw08w.h  gaxtuh1hw16w.h  gcsr.h  gk1.h  gpuSpmv_header.h  k1.h  ncsr.h
src/: cudaSpmv.cu  test_gaxc.cu  test_gaxtch.cu  test_gaxtch1.cu  test_gaxtuh.cu  test_gaxtuh1hw04w.cu  test_gaxtuh1hw08w.cu  test_gaxtuh1hw16w.cu  test_gcsr.cu  test_gcucsr.cu  test_gk1.cu  test_gpu_spmv.cu  test_ncsr.cu
utils/: mtx2csr  npz2csr
